More template clarification about audits

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/index.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/index.html
@@ -146,6 +146,7 @@
             <p>
               Audit information in this app against AnVIL.
               These audits check that the information in this app is consistent with AnVIL.
+              Audit results are cached for faster reviewing.
             </p>
           </div>
           <ul class="list-group list-group-flush">
