--- a/anvil_consortium_manager/templates/auditor/audit_review.html
+++ b/anvil_consortium_manager/templates/auditor/audit_review.html
@@ -21,7 +21,7 @@
     {% endif %}
   </p>
 
-    The audit was last run on <strong>{{audit_timestamp|localtime}}</strong>.
+    The audit was last run on <strong>{{audit_timestamp|localtime}}</strong> and may not reflect recent changes.
     Results can be updated by clicking on the "Update audit" button at the bottom of the page.
 </div>
 
