--- a/anvil_consortium_manager/templates/anvil_consortium_manager/__object_list.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/__object_list.html
@@ -17,11 +17,11 @@
       <div class="accordion" id="accordionExample">
         <div class="accordion-item">
             <h2 class="accordion-header">
-                <button class="accordion-button {% if not filter.form.is_bound %}collapsed{% endif %}" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="{% if filter.form.is_bound %}true{% else %}false{% endif %}" aria-controls="collapseOne">
+                <button class="accordion-button type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                     Filter records
                 </button>
             </h2>
-            <div id="collapseOne" class="accordion-collapse collapse {% if filter.form.is_bound %}show{% endif %}" data-bs-parent="#accordionExample">
+            <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
                     {% crispy filter.form %}
                 </div>
