Show alert in ManagedGroupMembership review page if group audit has errors
This alerts the user that an error was detected with the ManagedGroup
audit, and therefore the results of the membership audit could be
incorrect. If the only error with the managed group is with the membership,
no alert is shown.

--- a/anvil_consortium_manager/templates/auditor/audit_review.html
+++ b/anvil_consortium_manager/templates/auditor/audit_review.html
@@ -12,6 +12,7 @@
 {% block main_header %}
 {% endblock main_header %}
 
+{% block audit_result_alert %}
 <div class="alert alert-{% if audit_ok %}success{% else %}danger{% endif %}" role="alert">
   <p>
     {% if audit_ok %}
@@ -24,6 +25,7 @@
     The audit was last run on <strong>{{audit_timestamp|localtime}}</strong> and may not reflect recent changes.
     Results can be updated by clicking on the "Update audit" button at the bottom of the page.
 </div>
+{% endblock audit_result_alert %}
 
 <div class="my-3 p-3 bg-light border rounded shadow-sm">
   {% block audit_explanation %}
