--- a/anvil_consortium_manager/templates/auditor/ignoredmanagedgroupmembership_detail.html
+++ b/anvil_consortium_manager/templates/auditor/ignoredmanagedgroupmembership_detail.html
@@ -12,8 +12,8 @@
   </dd>
   <dt class="col-sm-2">Ignored email</dt> <dd class="col-sm-10">{{ object.ignored_email }}</dd>
   <dt class="col-sm-2">Added by</dt> <dd class="col-sm-10">
-    {% if object.added_by.get_absolute_url %}
-        <a href="{{ object.added_by.get_absolute_url }}">{{ object.added_by }}</a>
+    {% if user_detail_link %}
+        <a href="{{ user_detail_link }}">{{ object.added_by }}</a>
     {% else %}
         {{ object.added_by }}
     {% endif %}
