Show a pill when workspace is not managed by the app
Also align consistency between the managed group pill for the same
situation. Only show the pill when the object is *not* managed by the
app, and include a font-awesome icon.

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/managedgroup_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/managedgroup_detail.html
@@ -7,10 +7,8 @@
 {% block title %}Managed Group: {{ object.name }}{% endblock %}
 
 {% block pills %}
-  {% if object.is_managed_by_app %}
-    <span class="badge bg-success">Managed by app</span>
-  {% else %}
-    <span class="badge bg-secondary">Not managed by app</span>
+  {% if not object.is_managed_by_app %}
+    <span class="badge bg-secondary"><span class="fa-solid fa-users-slash me-2"></span>Not managed by app</span>
   {% endif %}
 {% endblock pills %}
 
