--- a/anvil_consortium_manager/templates/anvil_consortium_manager/managedgroup_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/managedgroup_detail.html
@@ -158,8 +158,7 @@
 
 {% block action_buttons %}
 
-{% if object.is_managed_by_app %}
-{% if show_edit_links %}
+{% if object.is_managed_by_app and show_edit_links %}
   <p>
     <a href="{% url 'anvil_consortium_manager:managed_groups:sharing:new' group_slug=object.name %}" class="btn btn-primary" role="button">Share a workspace with this group</a>
   </p>
@@ -171,15 +170,19 @@
   </p>
 {% endif %}
 
-<p>
-  <a href="{% url 'anvil_consortium_manager:auditor:managed_groups:membership:by_group:review' slug=object.name %}" class="btn btn-secondary" role="button">Audit membership</a>
-</p>
+{% if object.is_managed_by_app %}
+  <p>
+    <a href="{% url 'anvil_consortium_manager:auditor:managed_groups:membership:by_group:review' slug=object.name %}" class="btn btn-secondary" role="button">Audit membership</a>
+  </p>
+{% endif %}
+
 {% if show_edit_links %}
   <p>
     <a href="{% url 'anvil_consortium_manager:managed_groups:update' slug=object.name %}" class="btn btn-secondary" role="button">Update</a>
-    <a href="{% url 'anvil_consortium_manager:managed_groups:delete' slug=object.name %}" class="btn btn-danger" role="button">Delete on AnVIL</a>
+    {% if object.is_managed_by_app %}
+      <a href="{% url 'anvil_consortium_manager:managed_groups:delete' slug=object.name %}" class="btn btn-danger" role="button">Delete on AnVIL</a>
+    {% endif %}
   </p>
-  {% endif %}
 {% endif %}
 
 {% endblock action_buttons %}
