--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_detail.html
@@ -8,7 +8,9 @@
 {% block pills %}
 
   {% if not object.is_managed_by_app %}
-    <span class="badge bg-secondary"><span class="fa-solid fa-users-slash me-2"></span>Not managed by app</span>
+    <div class="alert alert-secondary my-3" role="alert">
+      <span class="fa-solid fa-ban me-1"></span> This workspace is not managed by the app.
+    </div>
   {% endif %}
 
   {% if has_authorization_domain_not_managed_by_app %}
