Add a field to indicate why a workspace is not accessible
This field (reason_inaccessible) can only be set if is_accessible_by_app
is False. Also show the reason on the workspace detail page.

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_detail.html
@@ -16,8 +16,7 @@
     {% if not object.is_accessible_by_app %}
     <div class="alert alert-secondary my-3" role="alert">
       <span class="fa-solid fa-ban me-1"></span>
-      The app no longer has access to this workspace, which means that
-      it was either deleted on AnVIL or access was removed.
+      The app no longer has access to this workspace: {{ object.reason_inaccessible }}
     </div>
   {% endif %}
 
