--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_detail.html
@@ -8,23 +8,7 @@
 {% block pills %}
 
   {% if object.app_access != object.AppAccessChoices.OWNER %}
-    <div class="alert alert-secondary my-3" role="alert">
-      <div class="container align-items-center d-flex">
-        <div class="">
-          <span class="fa-solid fa-ban me-1"></span>
-        </div>
-        <div class="p-2 flex-grow-1">
-            Information on this page may no longer be accurate because the app
-            {% if object.app_access == object.AppAccessChoices.LIMITED %}
-              has limited access
-            {% else %}
-              no longer has access
-            {% endif %}
-             to this workspace:
-            <strong>{{ object.app_access_reason }}</strong>
-        </div>
-      </div>
-    </div>
+    {% include 'anvil_consortium_manager/snippets/workspace_app_access_alert.html' with workspace=object %}
   {% else %}
     {% if has_authorization_domain_not_managed_by_app %}
     <div class="alert alert-warning my-3" role="alert">
