--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspacegroupsharing_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspacegroupsharing_detail.html
@@ -3,6 +3,12 @@
 
 {% block title %}Workspace group sharing: {{ object }}{% endblock %}
 
+{% block pills %}
+  {% if object.workspace.app_access != object.workspace.AppAccessChoices.OWNER %}
+    {% include 'anvil_consortium_manager/snippets/workspace_app_access_alert.html' with workspace=object.workspace %}
+  {% endif %}
+{% endblock pills %}
+
 {% block panel %}
 <dl class="row">
   <dt class="col-sm-2">Group</dt> <dd class="col-sm-10"><a href="{{object.group.get_absolute_url}}"> {{ object.group}} </a></dd>
