--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_detail.html
@@ -7,7 +7,7 @@
 
 {% block pills %}
 
-  {% if object.app_access != object.AppAccessChoices.OWNER %}
+  {% if not object.is_owner %}
     {% include 'anvil_consortium_manager/snippets/workspace_app_access_alert.html' with workspace=object %}
   {% else %}
     {% if has_authorization_domain_not_managed_by_app %}
@@ -100,7 +100,7 @@
 
 <div class="p-1">
 
-  {% if perms.anvil_consortium_manager.anvil_consortium_manager_staff_view and object.app_access == object.AppAccessChoices.OWNER %}
+  {% if perms.anvil_consortium_manager.anvil_consortium_manager_staff_view and object.is_owner %}
   <a href="{% url 'anvil_consortium_manager:auditor:workspaces:sharing:by_workspace:review' billing_project_slug=object.billing_project.name workspace_slug=object.name %}" class="btn btn-secondary" role="button">Audit sharing</a>
   {% endif %}
 
@@ -109,7 +109,7 @@
 {% if show_edit_links %}
 <div class="p-1">
 
-  {% if object.app_access == object.AppAccessChoices.OWNER %}
+  {% if object.is_owner %}
   <a href="{% url 'anvil_consortium_manager:workspaces:sharing:new' billing_project_slug=object.billing_project.name workspace_slug=object.name %}" class="btn btn-primary" role="button">Share with a group</a>
 
   <div class="btn-group">
@@ -125,7 +125,7 @@
     <a href="{% url 'anvil_consortium_manager:workspaces:update:internal' billing_project_slug=object.billing_project.name workspace_slug=object.name %}" class="btn btn-secondary" role="button">Update</a>
   {% endif %}
 
-  {% if object.app_access != object.AppAccessChoices.NO_ACCESS %}
+  {% if object.has_access %}
     <div class="btn-group">
       <button type="button" class="btn btn-warning dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
         Clone workspace
@@ -139,7 +139,7 @@
   {% endif %}
 </div>
 
-{% if object.app_access == object.AppAccessChoices.OWNER and not object.is_locked %}
+{% if object.is_owner and not object.is_locked %}
 <div class="p-1">
   <a href="{% url 'anvil_consortium_manager:workspaces:delete' billing_project_slug=object.billing_project.name workspace_slug=object.name %}" class="btn btn-danger" role="button">Delete on AnVIL</a>
 </div>
