--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspacegroupsharing_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspacegroupsharing_detail.html
@@ -4,7 +4,7 @@
 {% block title %}Workspace group sharing: {{ object }}{% endblock %}
 
 {% block pills %}
-  {% if object.workspace.app_access != object.workspace.AppAccessChoices.OWNER %}
+  {% if not object.workspace.is_owner %}
     {% include 'anvil_consortium_manager/snippets/workspace_app_access_alert.html' with workspace=object.workspace %}
   {% endif %}
 {% endblock pills %}
@@ -24,7 +24,7 @@
 {% endblock after_panel %}
 
 {% block action_buttons %}
-  {% if show_edit_links and object.workspace.app_access == object.workspace.AppAccessChoices.OWNER %}
+  {% if show_edit_links and object.workspace.is_owner %}
     <p>
       <a href="{% url 'anvil_consortium_manager:workspaces:sharing:update' billing_project_slug=object.workspace.billing_project.name workspace_slug=object.workspace.name group_slug=object.group.name %}" class="btn btn-secondary" role="button">Update</a>
       <a href="{% url 'anvil_consortium_manager:workspaces:sharing:delete' billing_project_slug=object.workspace.billing_project.name workspace_slug=object.workspace.name group_slug=object.group.name %}" class="btn btn-danger" role="button">Delete on AnVIL</a>
